--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,14 @@ spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 # Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto=create
+
+
+# Redis Configuration
+spring.redis.host=localhost
+spring.redis.port=6379
+#spring.redis.password=
+
+spring.redis.jedis.pool.max-active=7
+spring.redis.jedis.pool.max-idle=7
+spring.redis.jedis.pool.min-idle=2
+spring.redis.jedis.pool.max-wait=10s
