add support for cache results

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.jpa.hibernate.ddl-auto=create
 # Redis Configuration
 spring.redis.host=localhost
 spring.redis.port=6379
-#spring.redis.password=
+spring.redis.password=
 
 spring.redis.jedis.pool.max-active=7
 spring.redis.jedis.pool.max-idle=7
