--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
+########################################################################################################################
 # Application Configuration
 server.port=8080
 spring.profiles.active=dev
 
 
+########################################################################################################################
 # MySQL Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/db
 spring.datasource.username=user
 spring.datasource.password=user
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.hikari.pool-name=routes-hikari-pool
 spring.datasource.hikari.connection-timeout=20000
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.maximum-pool-size=12
@@ -17,14 +20,22 @@ spring.datasource.hikari.max-lifetime=1200000
 spring.datasource.hikari.auto-commit=true
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
+########################################################################################################################
 ## Hibernate Properties
+
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
+# in order to read schema.sql and data.sql
+spring.datasource.initialization-mode=always
 
 
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+########################################################################################################################
 # Redis Configuration
 spring.redis.host=localhost
 spring.redis.port=6379
