--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,42 +3,31 @@ version: '3.3'
 services:
 
   mysql:
-    container_name: mysql
     image: mysql:5.7
     restart: always
     environment:
       MYSQL_DATABASE: 'db'
-      # So you don't have to use root, but you can if you like
       MYSQL_USER: 'user'
-      # You can use whatever password you like
       MYSQL_PASSWORD: 'user'
-      # Password for root access
       MYSQL_ROOT_PASSWORD: 'password'
     ports:
-      # <Port exposed> : < MySQL Port running inside container>
       - '3306:3306'
     expose:
-      # Opens port 3306 on the container
       - '3306'
-      # Where our data will be persisted
     volumes:
       - my-db:/var/lib/mysql
-    networks:
-      - gateway
 
   redis:
-    container_name: redis
     image: redis
     command: redis-server /usr/local/etc/redis/redis.conf
     volumes:
       - ./redis.conf:/usr/local/etc/redis/redis.conf
     ports:
       - "6379:6379"
-    networks:
-      - gateway
+    expose:
+      - '6379'
 
   redis-commander:
-    container_name: redis-commander
     hostname: redis-commander
     image: rediscommander/redis-commander:latest
     restart: always
@@ -46,14 +35,23 @@ services:
       - REDIS_HOSTS=local:redis:6379
     ports:
       - "8081:8081"
-    networks:
-      - gateway
+    expose:
+      - '8081'
+    depends_on:
+      - redis
 
-# Names our volume
+#  routes-service:
+#    image: routes-service-image
+#    build:
+#      context: ./
+#      dockerfile: Dockerfile
+#    depends_on:
+#      - mysql
+#      - redis
+#    ports:
+#      - 8080:8080
+#    volumes:
+#      - /data/routes-service-app
+
 volumes:
   my-db:
-  redis-data:
-
-
-networks:
-  gateway: {}
