--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,1 +1,4 @@
 # Note: add your desired configuration for development environment here.
+spring.datasource.url=jdbc:mysql://localhost:3306/db
+spring.redis.host=localhost
+
