--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,8 +30,8 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.initialization-mode=always
 
 
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.properties.hibernate.format_sql=false
 
 ########################################################################################################################
 # Redis Configuration
