--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,7 @@
 ########################################################################################################################
 # Application Configuration
 server.port=8080
+spring.profiles.active=integration
 
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.write-date-timestamps-as-nanoseconds=false
@@ -19,6 +20,7 @@ spring.datasource.hikari.idle-timeout=300000
 spring.datasource.hikari.max-lifetime=1200000
 spring.datasource.hikari.auto-commit=true
 spring.datasource.hikari.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 ########################################################################################################################
 ## Hibernate Properties
