--- a/docker-compose.travis.yml
+++ b/docker-compose.travis.yml
@@ -15,7 +15,7 @@ services:
     expose:
       - '3306'
     volumes:
-      - my-db:/var/lib/mysql
+      - ./data:/var/lib/mysql
 
   redis:
     image: redis
@@ -26,6 +26,3 @@ services:
       - "6379:6379"
     expose:
       - '6379'
-
-volumes:
-  my-db:
