--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     expose:
       - '3306'
     volumes:
-      - my-db:/var/lib/mysql
+      - ./data:/var/lib/mysql
 
   redis:
     image: redis
@@ -53,5 +53,3 @@ services:
 #    volumes:
 #      - /data/routes-service-app
 
-volumes:
-  my-db:
