--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -9,8 +9,8 @@ spring.jackson.serialization.write-date-timestamps-as-nanoseconds=false
 ########################################################################################################################
 # MySQL Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=user
-spring.datasource.password=user
+spring.datasource.username=root
+spring.datasource.password=password
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.pool-name=routes-hikari-pool
 spring.datasource.hikari.connection-timeout=20000
