--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,7 @@ services:
   - docker
 
 before_script:
-  - docker-compose -f docker-compose.travis.yml up --build -d
-  - docker ps -a
-  - sleep 30
+  - docker-compose -f docker-compose.travis.yml up --build
 
 script: mvn clean verify
 
