--- a/docker-compose.travis.yml
+++ b/docker-compose.travis.yml
@@ -12,13 +12,23 @@ services:
       MYSQL_ROOT_PASSWORD: 'password'
     ports:
       - '3306:3306'
+    expose:
+      - '3306'
     volumes:
-      - ./data:/var/lib/mysql
+      - my-db:/var/lib/mysql
 
   redis:
     image: redis
     command: redis-server /usr/local/etc/redis/redis.conf
     volumes:
-      - ./redis.conf:/usr/local/etc/redis/redis.conf
+      - redis-data:/usr/local/etc/redis/redis.conf
     ports:
       - "6379:6379"
+    expose:
+      - '6379'
+
+
+volumes:
+  my-db:
+  redis-data:
+
