--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -11,7 +11,7 @@ spring.jackson.serialization.write-date-timestamps-as-nanoseconds=false
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=user
 spring.datasource.password=user
-spring.datasource.url=jdbc:mysql://mysql:3306/db
+spring.datasource.url=jdbc:mysql://localhost:3306/db
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.pool-name=routes-hikari-pool
 spring.datasource.hikari.connection-timeout=20000
@@ -37,7 +37,7 @@ spring.jpa.properties.hibernate.format_sql=false
 
 ########################################################################################################################
 # Redis Configuration
-spring.redis.host=redis
+spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.password=
 
