--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,4 @@ spring.redis.jedis.pool.max-active=7
 spring.redis.jedis.pool.max-idle=7
 spring.redis.jedis.pool.min-idle=2
 spring.redis.jedis.pool.max-wait=10s
+spring.redi
