heavy changes in api city info provided response

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,6 +6,12 @@ spring.profiles.active=integration
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.write-date-timestamps-as-nanoseconds=false
 
+generate.routes=true
+
+cities-csv-processor.display-parsing-info=false
+
+route-data-generator.display-storing-info=false
+
 ########################################################################################################################
 # MySQL Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
