--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,9 @@ cities-csv-processor.display-parsing-info=false
 
 route-data-generator.display-storing-info=false
 
+route-data-generator.no-of-itineraries-for-selected-root-city=4
+
+
 ########################################################################################################################
 # MySQL Configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
