--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -11,7 +11,10 @@ generate.routes=true
 cities-csv-processor.display-parsing-info=false
 
 route-data-generator.display-storing-info=false
-route-data-generator.no-of-itineraries-for-selected-root-city=7
+route-data-generator.no-of-itineraries-for-selected-root-city=10
+
+security.username=user
+security.password=1234
 
 ########################################################################################################################
 # MySQL Configuration
